# workspace

./: .clang-format  .custom-format.py  .gitignore  .gitmodules  Dockerfile  GNUmakefile  GNUmakefile.gcc_plugin  GNUmakefile.llvm  README.md  TODO.md  afl-addseeds  afl-cmin.awk  afl-cmin.bash  afl-cmin.py
.github/: pull_request_template.md
benchmark/: benchmark.py
custom_mutators/: README.md
custom_mutators/libafl_base/: Cargo.toml
custom_mutators/libafl_base/src/: lib.rs
custom_mutators/libafl_nautilus/: Cargo.toml  README.md
custom_mutators/libafl_nautilus/src/: lib.rs
dictionaries/: stl.dict
docs/: Changelog.md  FAQ.md  FrameShift.md  IJON.md  INSTALL.md  SAND.md  best_practices.md  env_variables.md  features.md  fuzzing_binary-only_targets.md  fuzzing_in_depth.md  important_changes.md
frida_mode/: DEBUGGING.md  GNUmakefile  Makefile
include/: afl-fuzz.h  afl-ijon-min.h  afl-mutations.h  cmplog.h  common.h  config.h  debug.h  envs.h  forkserver.h  hash.h  sharedmem.h  types.h
instrumentation/: README.llvm.md  SanitizerCoverageLTO.so.cc  SanitizerCoveragePCGUARD.so.cc  afl-compiler-rt.o.c  afl-gcc-cmplog-pass.so.cc  afl-gcc-cmptrs-pass.so.cc  afl-gcc-common.h  afl-gcc-pass.so.cc  afl-llvm-common.cc  afl-llvm-common.h  afl-llvm-dict2file.so.cc  afl-llvm-ijon-pass.so.cc  afl-llvm-lto-instrumentlist.so.cc  afl-llvm-pass.so.cc  cmplog-instructions-pass.cc  cmplog-routines-pass.cc  cmplog-switches-pass.cc  compare-transform-pass.so.cc  injection-pass.cc  split-compares-pass.so.cc  split-switches-pass.so.cc
nyx_mode/: LIBNYX_VERSION  PACKER_VERSION  build_nyx_support.sh
papers/: AutoRestTest_复现指南.md
qemu_mode/: QEMUAFL_VERSION  README.md  build_qemu_support.sh
src/: Makefile  afl-analyze.c  afl-cc.c  afl-cmin.c  afl-common.c  afl-forkserver.c  afl-fuzz-bitmap.c  afl-fuzz-cmplog.c  (+18 more)
(+144 files in other folders)
